# django-apitokens

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
apitokens/: admin.py  apps.py  models.py
apitokens/migrations/: 0001_initial.py  0002_migrate_auth_token.py
apitokens/templates/admin/apitokens/mytoken/: change_list.html
apitokens/templates/admin/apitokens/token/: change_list.html
testapp/: requirements.txt
testapp/testapp/: settings.py
testapp/testapp/templates/admin/: base.html
